# Try3DLibs

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  toolchain-msvc.cmake
res/: resources.qrc
res/icons/: icons.qrc
res/styles/: lightStyle.qss  styles.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/components/: ELementListWidget.cpp  ElementListDock.cpp  ElementListDock.h  ElementListWidget.h  FileListDock.cpp  FileListDock.h  FileListWidget.cpp  FileListWidget.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  ImageWidget.cpp  ImageWidget.h  OperationButtonDock.cpp  OperationButtonDock.h  OperationWidget.cpp  OperationWidget.h  PropertyDisplayDock.cpp  PropertyDisplayDock.h  PropertyWidget.cpp  PropertyWidget.h  VTKDisplayWidget.cpp  VTKDisplayWidget.h  VTKWidget.cpp  VTKWidget.h
